helm/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster
  name: preview-gateway
  namespace: preview
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        # - "*.preview-127.0.0.1.sslip.io"
        - "*.preview.tradersclub.com.br"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: preview-domain-cert-dev
        # httpsRedirect: true
        mode: SIMPLE
